  - TDRE bit is status register more accurately handled

Emulator:
- Support for compiling with libSDL2 (experimental)
  - SDL2 supports other than 2x scaling factors for ST/e emulation
- Misc fixes:
  - Fix: WinUAE CPU core (FPU) memory state restore
  - Fix: chrash with VDI extended resolution emulation when
         C: isn't GEMDOS HD emulated drive
  - Fix: compilation when zlib is missing
  - Fix: bugs from Debian bug tracker:
	 https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=716536
	 https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=688594
- Additional TOS run-time patching:
  - Support fast boot also with TOS v3 & v4
  - Support 32-bit addressing also with TOS v4
  - Replace TOS v4 instructions unsupported on 060
  - HW specific phystop value in VDI mode
- Options:
  - Fast boot (warm boot / memory check bypass) is disabled by default
  - 68060 CPU level and --ttram support with new WinUAE CPU core
  - New --png-level option to decrease AVI compression CPU load
  - Mouse warping on reset & resolution change can be controlled
    with new --mousewarp option
- Hard drive emulation:
  - BUS ID for ACSI drive can be specified with --acsi
  - GUI and command line options to enable 8-bit file name
    Atari <-> host charset conversion for GEMDOS HD
  - GUI and command line options to specify GEMDOS HD emulation drive
    (default = C:), or to skip recognized drives used by partitions
    on ACSI & IDE images
    - Partition count parsed by Hatari might not match count used by
      Atari HD driver due to driver differences in interpreting disk MBR
  - Refuse to mount same HD image from multiple Hatari instances
    (on platforms supporting BSD flock()), to avoid corrupting them
- SDL GUI:
  - joystick navigation in options GUI
  - keyboard navigation & shortcuts in options GUI
  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names